@@ -8,6 +8,8 @@ General
 
   o Fail early with clear error message if configured paths are not
     creatable/writable.
+  o Added backwards compatibility (with deprecation warning) for using
+    thumbnails-path instead of thumbnail-path in casparcg.config.
 
 CasparCG 2.1.0 Beta 1 (w.r.t 2.0.7 Stable)
 ==========================================
